re PR c++/55032 (Internal compiler error: in strip_typedefs, at cp/tree.c:1199)

PR c++/55032
	* tree.c (build_array_type_1): Re-layout if we found it in the
	hash table.

From-SVN: r194265